force-app/main/default/objects/Project_Sites__c/Project_Sites__c.object-meta.xml
<CustomObject>
    <label>Project Sites</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>