force-app/main/default/objects/Project_Sites__c/fields/Business_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Business_End_Time__c</fullName>
    <label>Business End Time</label>
    <type>Time</type>
</CustomField>