force-app/main/default/objects/Project_Sites__c/fields/Business_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Time__c</fullName>
    <label>Business Start Time</label>
    <type>Time</type>
</CustomField>