force-app/main/default/objects/Project_Sites__c/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>