force-app/main/default/objects/Project_Sites__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <label>Number of Users</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>