force-app/main/default/objects/Project_Sites__c/fields/Site_Classification__c.field-meta.xml
<CustomField>
    <fullName>Site_Classification__c</fullName>
    <label>Site Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>