force-app/main/default/objects/Project_Sites__c/fields/Site_Co_ordinator_Customer__c.field-meta.xml
<CustomField>
    <fullName>Site_Co_ordinator_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Co-ordinator(Customer)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects Sites</relationshipLabel>
    <relationshipName>Projects_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>