force-app/main/default/objects/Project_Sites__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State/ Province</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>