force-app/main/default/objects/Project_Sites__c/fields/ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Postal_Code__c</fullName>
    <label>ZIP/ Postal Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>